Move db, handler packages to infra
